<resources>
    <string name="app_name">trendpass</string>
    <string name="title_activity_maps">Map</string>



    <string name="title_activity_insert_review">InsertReviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_confirm_unsubscribe">ConfirmUnsubscribeActivity</string>
    <string name="title_activity_complete_unsubscribe">CompleteUnsubscribeActivity</string>

    <string name="description">pictures</string>



    <string name="myReviewBtn">口コミ</string>
    <string name="mySpotBtn">スポット</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 7 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUpGuideMsg">初めてご利用のお客様【アカウント作成】</string>
    <string name="loginBtn">ログイン</string>
    <string name="signUpBtn">アカウントを作成</string>
    <string name="loginTitle">ログイン</string>
    <string name="settingsSignChange">会員情報変更</string>
    <string name="settingsLogout">ログアウト</string>
    <string name="settingsUnsubscribe">Trend Passから退会</string>
    <string name="settings">設定</string>





    <string-array name="sexList">
    <item>男</item>
    <item>女</item>
    <item>未</item>

    </string-array>

    <string-array name="genreList">
        <item>飲食店</item>
        <item>教育機関</item>
    </string-array>

    <string-array name="distList">
        <item>1kmから5km</item>
        <item>5kmから10km</item>
        <item>10kmから15km</item>
    </string-array>

    <string-array name="generationList">
        <item>10代</item>
        <item>20代</item>
        <item>30代</item>
    </string-array>

    <string-array name="sortList">
        <item>未選択</item>
        <item>人気順</item>
    </string-array>

    <string name="dispPassBtnTxt">すれちがい</string>
    <string name="dispRankingBtn">ランキング</string>
    <string name="Imageupload">アイコン設定</string>
    <string name="nameHint">ユーザーネーム</string>
    <string name="mailHint">メールアドレス</string>
    <string name="passwordHint">パスワード</string>
    <string name="passwordHint2">パスワード確認</string>
    <string name="birthHint">生年</string>
</resources>